@startuml

skinparam componentStyle uml2

package "'Abrigo' Aggregate" <<Rectangle>> {
	class Abrigo <<(A,#fffab8) Aggregate Root>> {
		String nome_abrigo
		int capacidadeAbrigo
		IdAbrigo id_abrigo
		Endereco endereco_abrigo
		Contato contato_abrigo
		List<IdAnimal> animais_abrigados
		List<IdPessoa> funcionariosAbrigo
		boolean isMaxCapacity()
		void setNomeAbrigo(String nomeAbrigo)
		String getNomeAbrigo()
		Contato getContatoAbrigo()
		void setContatoAbrigo(Contato contatoAbrigo)
		int getCapacidadeAbrigo()
		void setCapacidadeAbrigo(int capacidadeAbrigo)
		List<Pessoa> getFuncionariosAbrigo()
		List<Animal> getAnimaisAbrigo()
	}
	class IdAbrigo <<(V,DarkSeaGreen) Value Object>> {
		int id_abrigo
		int getId()
	}
	class Endereco <<(V,DarkSeaGreen) Value Object>> {
		String cidade
		String rua
		String getRua()
		String getCidade()
	}
	class Contato <<(V,DarkSeaGreen) Value Object>> {
		String telefone
		String email_contato
		String getEmail()
		String getTelefone()
	}
	class GetAnimais <<(S,DarkSeaGreen) Service>> {
		List<Animal> getAnimaisAbrigo()
	}
}
Abrigo --> IdAbrigo : id_abrigo
Abrigo --> Endereco : endereco_abrigo
Abrigo --> Contato : contato_abrigo


@enduml
